--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--CSS LIGHTSLIDER-->
+  <link type="text/css" rel="stylesheet" href="/css/lightslider.css" />
   <!--CSS-->
   <link rel="stylesheet" href="css/main.css">
   <!--Fuente-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
+  <!--SCRIPTS DEL CAROUSEL (LIGHTSLIDER)-->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="/js/lightslider.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#content-slider").lightSlider({
+        item: 5,
+        loop: true,
+        keyPress: true
+      })
+    });
+  </script>
   <title>Pagina Comics - Inicio</title>
 </head>
 
@@ -61,37 +75,30 @@
   <!--INICIO DE MAIN Y CAROUSEL-->
 
   <main>
-    <section class="seccionCarousel">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <a href="#"><img src="./images/comics/Doctor_Doom_Vol_1_1_Second_Printing_Variant.webp"
-                class="d-inline-block w-100" alt="comic carousel 1"></a>
-          </div>
-          <div class="carousel-item">
-            <a href="#"><img src="./images/comics/inferno.png" class="d-inline-block w-100" alt="comic carousel 2"></a>
-          </div>
-          <div class="carousel-item">
-            <a href="#"><img src="./images/comics/death of wolverine.jpg" class="d-inline-block w-100"
-                alt="comic carousel 3"></a>
-          </div>
-          <div class="carousel-item">
-            <a href="#"><img src="./images/comics/drstrange.jpg" class="d-inline-block w-100"
-                alt="comic carousel 4"></a>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+    <div class="demo">
+      <div class="item">
+        <ul id="content-slider" class="content-slider">
+          <li>
+            <a href=""><img src="/images/comics/A19LSfFe4sL.png" alt="" width="300px"></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/comics/1536.jpg" alt="" width="300px"></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/comics/inhumans.png" alt="" width="300px"></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/comics/batman.jpg" alt="" width="300px"></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/comics/death of wolverine.jpg" alt="" width="300px"></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/comics/magneto.png" alt="" width="300px"></a>
+          </li>
+        </ul>
       </div>
-    </section>
+    </div>
 
     <!--INICIO DE TENDENCIAS-->
 
