Agregue mas htmls, los edite, les di un estilo, inclui grid y flex al maquetado de éstas

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
               <a class="fs-5 fs-5 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
               <ul class="fs-5 dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="fs-5 dropdown-item" href="#">Personajes</a></li>
-                <li><a class="fs-5 dropdown-item" href="#">Editoriales</a></li>
+                <li><a class="fs-5 dropdown-item" href="./pages/personajes.html">Personajes</a></li>
+                <li><a class="fs-5 dropdown-item" href="./pages/editoriales.html">Editoriales</a></li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="fs-5 nav-link" href="#contacto">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="fs-5 nav-link" href="#">Sobre Nosotros</a>
+              <a class="fs-5 nav-link" href="./pages/sobrenosotros.html">Sobre Nosotros</a>
             </li>
           </ul>
         </div>
@@ -196,12 +196,12 @@
     <!--INSTRUCCIONES-->
 
     <div class="container-fluid instrucciones text-center mb-5">
-      <a id="contacto" class="fs-4 text-light" href="#">Instrucciones</a>
+      <a class="fs-4 text-light" href="./pages/instrucciones.html">Instrucciones</a>
     </div>
 
     <!--INICIO DE FORM Y IFRAME-->
 
-    <section class="formIframe p-4">
+    <section id="contacto" class="formIframe p-4">
       <form class="mt-4 p-5 border">
         <h3 class="text-center pb-4">Contactanos!</h3>
         <div class="mb-3">
@@ -218,7 +218,7 @@
           <label for="inputTel" class="form-label">Telefono</label>
           <input type="tel" class="form-control" id="inputTel" aria-describedby="emailHelp">
         </div>
-        <div class="text-center">
+        <div id="contacto" class="text-center">
           <button type="submit" class="pe-5 ps-5 btn btn-primary">Enviar</button>
         </div>
       </form>
@@ -258,7 +258,7 @@
       </div>
       <div class="sobreNosDiv">
         <h4>Sobre Nosotros</h4>
-        <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
+        <p>Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
       <div class="hide2">
