Maquete sobrenosotros.html de vuelta

--- a/pages/comicejemplo.html
+++ b/pages/comicejemplo.html
@@ -60,34 +60,44 @@
 
   <!--INICIO DE COMIC/MAIN-->
   <main>
-    <section class="container-fluid comicMain">
-      <div class="card">
-        <h1 class="comicTitulo">Inhumans vs X-Men</h1>
-        <img src="../images/comics/inhumans-vs-xmen.png" class="card-img-top"
-          alt="comic principal a descargar">
+    <section class="container-fluid comicTituloPadre">
+      <h1 class="comicTitulo">Inhumans vs X-Men</h1>
+      <div class="comicMain">
+        <div class="cardTitleImg">
+          <img src="../images/comics/inhumans-vs-xmen.png" class="card-img-top" alt="comic principal a descargar">
+        </div>
         <div class="card-body">
-          <h2 class="cardTitulo">Sinopsis</h2>
           <p class="cardDescripcion">Las nieblas terrígenas están en el mundo, dando poderes a los inhumanos, pero al
             mismo tiempo asesina mutantes en su paso por el mundo, infectándolos con el mortal M-Pox. Cyclops y Emma
             Frost lograron destruir una nube, pero no sin que esta matara a Scott. Pero esto no ha terminado, aún hay
             otra nube en el mundo y Beast ha sido enviado a Nueva Attilan para tratar de hallar una forma de hacer
             inofensiva a la nube para los mutantes, pero después de un año de estar ahí, los resultados no se han
             producido, y la comunidad mutante está impacientándose y una guerra entre inhumanos y mutantes se está
-            volviendo inevitable. </p>
-        </div>
-        <div class="cardLinks">
-          <a href="#">Link de descarga</a>
-          <a href="#">Link de descarga</a>
-          <a href="#">Link de descarga</a>
+            volviendo inevitable.</p>
+          <div class="cardLinks">
+            <a href="#">Link de descarga</a>
+            <a href="#">Link de descarga</a>
+            <a href="#">Link de descarga</a>
+          </div>
         </div>
       </div>
-    </section>
+    </section class="container-fluid">
 
     <!--INICIO DE "COMICS RELACIONADOS"-->
 
-    <section class="comicsRelacionados p-4">
-
-    </section>
+    <section class="comicsRelacionadosContenedor">
+      <h2 class="comicsRelacionadosTitulo">Comics relacionados</h2>
+      <div class="comicsRelacionados">
+        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/drstrange.jpg"
+            alt="Comic 5 recien agregados" width="250"></a>
+        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded"
+            src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 6 recien agregados" width="250"></a>
+        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/magneto.png"
+            alt="Comic 7 recien agregados" width="250"></a>
+        <a href="#"><img class="hide1 img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/penguin.jpg"
+            alt="Comic 8 recien agregados" width="250"></a>
+      </div>
+    </section class="">
 
     <!--INICIO DE FORM Y IFRAME-->
 
