agregue nuevas secciones a sobrenosotros.html y agregue un poco de media queries

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -61,84 +61,93 @@
   <!--INICIO DE MAIN-->
 
   <main>
-    <h1>Sobre Nosotros</h1>
-    <section class="contenedorSobreNos">
-      <div class="sobreNosUno">
-        <div>
-          <h2>Sobre Nosotros</h2>
-          <div>
+    <section class="sobreNosotros">
+      <div class="sobreNosotrosPadre">
+        <div class="contenedorSobreNos">
+          <div class="sobreNosUno">
+            <h1>Sobre nosotros</h1>
+            <h2>Servicio online de comics digitales.</h2>
             <p>Somos una pagina para amantes de los comics donde vas a poder encontrar variedad de comics
-              <span>GRATIS</span> para descargar</p>
+              gratis para descargar
+            </p>
             <p>Tambien vas a encontrar varias secciones que te pueden interesar...</p>
             <p>Como nuestra seccion de recien agregados que contiene comics recien salidos de las editoriales listos
               para leer, tambien las tendencias del momento y mas!</p>
             <p>Otra seccion muy famosa de nuestra pagina es el apartado de colecciones, ahi vas a poder encontrar en
               orden las series de tus personajes favoritos para que puedas leerlas sin tener que preocuparte de si falta
               alguno!</p>
+            <h2 id="necesitasAyuda" class="mt-4">Necesitas ayuda?</h2>
+            <a href="../pages/instrucciones.html">Instrucciones</a>
           </div>
-          <h2 id="necesitasAyuda" class="mt-4">Necesitas ayuda?</h2>
-          <p>Segui los pasos en <a href="../pages/instrucciones.html">Instrucciones</a> para aprender a descargar
-            comics!</p>
+          <img src="../images/logo.jfif" alt="">
+        </div>
+
+        <div class="sobreNosDosPadre">
+          <h3 class="tituloSobreNosDos">¿Qué ofrecemos?</h3>
+          <div class="sobreNosDos">
+            <div class="ofrecemos">
+              <h3>Lectura Digital</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
+                odio
+                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
+                consequuntur
+                vel?</p>
+            </div>
+            <div class="ofrecemos">
+              <h3>Lectura Digital</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
+                odio
+                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
+                consequuntur
+                vel?</p>
+            </div>
+            <div class="ofrecemos">
+              <h3>Guia</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
+                odio
+                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
+                consequuntur
+                vel?</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="sedes">
-        <h2 class="text-center">Nuestras tiendas</h2>
-        <div class="mt-5 mapaSobreNos mapouter shadow border">
-          <div class="img-fluid gmap_canvas"><iframe width="500" height="400" id="gmap_canvas"
-              src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
-              frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-              href="https://fmovies-online.net"></a><br>
-            <style>
-              .mapouter {
-                position: relative;
-                text-align: right;
-                height: 400px;
-                width: 500px;
-              }
-            </style><a href="https://www.embedgooglemap.net">google map widget for website</a>
-            <style>
-              .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 400px;
-                width: 500px;
-              }
-            </style>
+      <div class="sobreNosotrosPadreDos">
+        <div class="redesSociales">
+          <h3>Seguinos en nuestras redes sociales!</h3>
+          <div class="iconsRedes">
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
           </div>
+        </div>
+        <div class="semiContacto">
+          <h3>Contactanos directamente!</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure omnis, iusto aliquam distinctio eveniet
+            fugiat voluptate error beatae, quibusdam nisi tempora sapiente! Eum, quidem? Aut rerum vero in nobis.</p>
         </div>
       </div>
-      <div class="redesSobreNos">
-        <h2>Seguinos en nuestras redes</h2>
-        <div class="redesFlex">
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-facebook"></i> </a>
-          <a href=""><i class="bi bi-twitter"></i></a>
-          <a href=""><i class="bi bi-whatsapp"></i></a>
-          <a href=""><i class="bi bi-telephone"></i></a>
-          <a href=""><i class="bi bi-messenger"></i></a>
-        </div>
-        <h2>Para no perderte todas las novedades!</h2>
-      </div>
-        <div class="preguntasFrecuentes">
-          <h2 class="text-center">Preguntas Frecuentes</h2>
-          <div>
-            <p class="fw-bold">¿Cómo descargo comics?</p>
-            <p>Podes encontrar una guia en <a href="../pages/instrucciones.html">Instrucciones</a>.</p>
-          </div>
-          <div>
-            <p class="fw-bold">¿Cómo me pongo en contacto?</p>
-            <p>Podes contactarnos por nuestras redes sociales o por nuestro formulario.</p>
-          </div>
-          <div>
-            <p class="fw-bold">¿En qué idioma estan los comics?</p>
-            <p>Los comics estan en español, proximamente tambien en ingles.</p>
-          </div>
-          <div>
-            <p class="fw-bold">¿En qué orden se leen?</p>
-            <p>En nuestra seccion de colecciones ya estan ordenados.</p>
-          </div>
-        </div>
     </section>
+    <!--
+          <div class="preguntasFrecuentes">
+            <h2 class="text-center">Preguntas Frecuentes</h2>
+            <div>
+              <p class="fw-bold">¿Cómo descargo comics?</p>
+              <p>Podes encontrar una guia en <a href="../pages/instrucciones.html">Instrucciones</a>.</p>
+            </div>
+            <div>
+              <p class="fw-bold">¿Cómo me pongo en contacto?</p>
+              <p>Podes contactarnos por nuestras redes sociales o por nuestro formulario.</p>
+            </div>
+            <div>
+              <p class="fw-bold">¿En qué idioma estan los comics?</p>
+              <p>Los comics estan en español, proximamente tambien en ingles.</p>
+            </div>
+            <div>
+              <p class="fw-bold">¿En qué orden se leen?</p>
+              <p>En nuestra seccion de colecciones ya estan ordenados.</p>
+            </div>
+          </div>-->
 
     <!--INICIO DE FORM Y IFRAME-->
 
