--- a/pages/comicejemplo.html
+++ b/pages/comicejemplo.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Fuente-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <!--Fuente-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <title>Pagina Comics - Comic "Ejemplo"</title>
 </head>
 
@@ -64,7 +64,7 @@
       <h1 class="comicTitulo">Inhumans vs X-Men</h1>
       <div class="comicMain">
         <div class="cardTitleImg">
-          <img src="../images/comics/inhumans-vs-xmen.png" class="card-img-top" alt="comic principal a descargar">
+          <img src="../images/comics/inhumans-vs-xmen.png" alt="comic principal a descargar">
         </div>
         <div class="card-body">
           <p class="cardDescripcion">Las nieblas terrígenas están en el mundo, dando poderes a los inhumanos, pero al
