--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -76,7 +76,7 @@
             <p>Otra seccion muy famosa de nuestra pagina es el apartado de colecciones, ahi vas a poder encontrar en
               orden las series de tus personajes favoritos para que puedas leerlas sin tener que preocuparte de si falta
               alguno!</p>
-            <h2 id="necesitasAyuda" class="mt-4">Necesitas ayuda?</h2>
+            <h2 class="h2NecesitasAyuda mt-4">Necesitas ayuda?</h2>
             <a href="../pages/instrucciones.html">Instrucciones</a>
           </div>
           <img src="../images/logo.jfif" alt="">
@@ -86,28 +86,16 @@
           <h3 class="tituloSobreNosDos">¿Qué ofrecemos?</h3>
           <div class="sobreNosDos">
             <div class="ofrecemos">
-              <h3>Lectura Digital</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
-                odio
-                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
-                consequuntur
-                vel?</p>
+              <h3><i class="bi bi-book-half"></i> Lectura Digital</h3>
+              <p>En nuestra pagina queremos que todos sean capaces de leer comics. Y la manera online es mas economica, rapida y practica, para que todos sean capaces de disfrutar. Es por eso que iniciamos este proyecto, para incluir a todos los fanaticos!.</p>
             </div>
             <div class="ofrecemos">
-              <h3>Lectura Digital</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
-                odio
-                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
-                consequuntur
-                vel?</p>
+              <h3><i class="bi bi-people"></i> Foro</h3>
+              <p>Aca en PAGINA COMICS ofrecemos un foro para que nuestros usuarios puedan acceder y compartir contenido, entablar conversaciones con otros usuarios y opinar publicamente sobre nosotros para que podamos mejorar!</p>
             </div>
             <div class="ofrecemos">
-              <h3>Guia</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam est perspiciatis eaque, eos iste a
-                odio
-                ex velit, in doloribus facilis aliquid reiciendis magnam recusandae minima praesentium officia,
-                consequuntur
-                vel?</p>
+              <h3><i class="bi bi-info-circle"></i> Guia</h3>
+              <p>Tambien contamos con un apartado de instrucciones para todos los nuevos en el mundo de los comics y una seccion de colecciones para que puedas leer tus comics favoritos en orden, sin tener que investigar muy a fondo qué leer!</p>
             </div>
           </div>
         </div>
@@ -127,33 +115,34 @@
             fugiat voluptate error beatae, quibusdam nisi tempora sapiente! Eum, quidem? Aut rerum vero in nobis.</p>
         </div>
       </div>
+      <div class="sobreNosotrosPadreTres">
+        <div class="preguntasFrecuentes">
+          <h3 class="text-center">Preguntas Frecuentes</h3>
+          <div>
+            <p class="fw-bold">¿Cómo descargo comics?</p>
+            <p>Podes encontrar una guia en <a href="../pages/instrucciones.html">Instrucciones</a>.</p>
+          </div>
+          <div>
+            <p class="fw-bold">¿Cómo me pongo en contacto?</p>
+            <p>Podes contactarnos por nuestras redes sociales o por nuestro formulario.</p>
+          </div>
+          <div>
+            <p class="fw-bold">¿En qué idioma estan los comics?</p>
+            <p>Los comics estan en español, proximamente tambien en ingles.</p>
+          </div>
+          <div>
+            <p class="fw-bold">¿En qué orden se leen?</p>
+            <p>En nuestra seccion de colecciones ya estan ordenados.</p>
+          </div>
+        </div>
+      </div>
     </section>
-    <!--
-          <div class="preguntasFrecuentes">
-            <h2 class="text-center">Preguntas Frecuentes</h2>
-            <div>
-              <p class="fw-bold">¿Cómo descargo comics?</p>
-              <p>Podes encontrar una guia en <a href="../pages/instrucciones.html">Instrucciones</a>.</p>
-            </div>
-            <div>
-              <p class="fw-bold">¿Cómo me pongo en contacto?</p>
-              <p>Podes contactarnos por nuestras redes sociales o por nuestro formulario.</p>
-            </div>
-            <div>
-              <p class="fw-bold">¿En qué idioma estan los comics?</p>
-              <p>Los comics estan en español, proximamente tambien en ingles.</p>
-            </div>
-            <div>
-              <p class="fw-bold">¿En qué orden se leen?</p>
-              <p>En nuestra seccion de colecciones ya estan ordenados.</p>
-            </div>
-          </div>-->
 
     <!--INICIO DE FORM Y IFRAME-->
 
-    <section id="contacto" class="formIframe p-4">
+    <section id="contacto" class="formIframe formIframePersonajes p-4">
       <form class="mt-4 p-5 border">
-        <h5 class="text-center pb-4">Contactanos!</h5>
+        <h2 class="text-center pb-4">Contactanos!</h2>
         <div class="mb-3">
           <label for="inputName" class="form-label">Nombre</label>
           <input type="text" class="mb-4 form-control" size="50" id="inputName">
@@ -172,6 +161,29 @@
           <button type="submit" class="pe-5 ps-5 btn btn-primary">Enviar</button>
         </div>
       </form>
+      <div class="mt-5 mapaG mapouter shadow border">
+        <div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas"
+            src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+            href="https://fmovies-online.net"></a><br>
+          <style>
+            .mapouter {
+              position: relative;
+              text-align: right;
+              height: 400px;
+              width: 500px;
+            }
+          </style><a href="https://www.embedgooglemap.net">google map widget for website</a>
+          <style>
+            .gmap_canvas {
+              overflow: hidden;
+              background: none !important;
+              height: 400px;
+              width: 500px;
+            }
+          </style>
+        </div>
+      </div>
     </section>
   </main>
 
