cambie varios html y los hice responsive

--- a/pages/comicejemplo.html
+++ b/pages/comicejemplo.html
@@ -85,19 +85,15 @@
 
     <!--INICIO DE "COMICS RELACIONADOS"-->
 
-    <section class="comicsRelacionadosContenedor">
-      <h2 class="comicsRelacionadosTitulo">Comics relacionados</h2>
-      <div class="comicsRelacionados">
-        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/drstrange.jpg"
-            alt="Comic 5 recien agregados" width="250"></a>
-        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded"
-            src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 6 recien agregados" width="250"></a>
-        <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/magneto.png"
-            alt="Comic 7 recien agregados" width="250"></a>
-        <a href="#"><img class="hide1 img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="../images/comics/penguin.jpg"
-            alt="Comic 8 recien agregados" width="250"></a>
+    <section class="comicsRelacionados">
+      <h3>Comics Relacionados</h3>
+      <div class="comicsRelacionadosImg">
+        <a href="#"><img src="../images/comics/drstrange.jpg" alt="Comic 1 relacionado" width="300"></a>
+        <a href="#"><img src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 2 relacionado" width="300"></a>
+        <a href="#"><img src="../images/comics/penguin.jpg" alt="Comic 3 relacionado" width="300"></a>
+        <a href="#"><img src="../images/comics/inhumans.png" alt="Comic 4 relacionado" width="300"></a>
       </div>
-    </section class="">
+    </section>
 
     <!--INICIO DE FORM Y IFRAME-->
 
