--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -42,7 +42,7 @@
               <a class="fs-5 fs-5 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
               <ul class="fs-5 dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="fs-5 dropdown-item" href="../pages/instrucciones.html">Personajes</a></li>
+                <li><a class="fs-5 dropdown-item" href="../pages/personajes.html">Personajes</a></li>
                 <li><a class="fs-5 dropdown-item" href="../pages/editoriales.html">Editoriales</a></li>
               </ul>
             </li>
@@ -87,15 +87,21 @@
           <div class="sobreNosDos">
             <div class="ofrecemos">
               <h3><i class="bi bi-book-half"></i> Lectura Digital</h3>
-              <p>En nuestra pagina queremos que todos sean capaces de leer comics. Y la manera online es mas economica, rapida y practica, para que todos sean capaces de disfrutar. Es por eso que iniciamos este proyecto, para incluir a todos los fanaticos!.</p>
+              <p>En nuestra pagina queremos que todos sean capaces de leer comics. Y la manera online es mas economica,
+                rapida y practica, para que todos sean capaces de disfrutar. Es por eso que iniciamos este proyecto,
+                para incluir a todos los fanaticos!.</p>
             </div>
             <div class="ofrecemos">
               <h3><i class="bi bi-people"></i> Foro</h3>
-              <p>Aca en PAGINA COMICS ofrecemos un foro para que nuestros usuarios puedan acceder y compartir contenido, entablar conversaciones con otros usuarios y opinar publicamente sobre nosotros para que podamos mejorar!</p>
+              <p>Aca en PAGINA COMICS ofrecemos un foro para que nuestros usuarios puedan acceder y compartir contenido,
+                entablar conversaciones con otros usuarios y opinar publicamente sobre nosotros para que podamos
+                mejorar!</p>
             </div>
             <div class="ofrecemos">
               <h3><i class="bi bi-info-circle"></i> Guia</h3>
-              <p>Tambien contamos con un apartado de instrucciones para todos los nuevos en el mundo de los comics y una seccion de colecciones para que puedas leer tus comics favoritos en orden, sin tener que investigar muy a fondo qué leer!</p>
+              <p>Tambien contamos con un apartado de instrucciones para todos los nuevos en el mundo de los comics y una
+                seccion de colecciones para que puedas leer tus comics favoritos en orden, sin tener que investigar muy
+                a fondo qué leer!</p>
             </div>
           </div>
         </div>
@@ -104,15 +110,14 @@
         <div class="redesSociales">
           <h3>Seguinos en nuestras redes sociales!</h3>
           <div class="iconsRedes">
-            <i class="bi bi-twitter"></i>
-            <i class="bi bi-facebook"></i>
-            <i class="bi bi-instagram"></i>
+            <a href=""><i class="bi bi-twitter"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
           </div>
         </div>
         <div class="semiContacto">
           <h3>Contactanos directamente!</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure omnis, iusto aliquam distinctio eveniet
-            fugiat voluptate error beatae, quibusdam nisi tempora sapiente! Eum, quidem? Aut rerum vero in nobis.</p>
+          <p>Podes contactar con nosotros en nuestra seccion de <a href="#contacto">contacto</a>. Ahi podes incluir que te gustaria que agreguemos, si la pagina te presenta algun inconveniente o lo que se te ocurra para que mejoremos!</p>
         </div>
       </div>
       <div class="sobreNosotrosPadreTres">
