--- a/pages/instrucciones.html
+++ b/pages/instrucciones.html
@@ -60,61 +60,53 @@
 
   <!--INICIO DE COMIC/MAIN-->
   <main>
-    <section class="container-fluid pb-5">
-      <div class="row">
-        <div class="instruccionesIzq col-md-9 text-center">
-          <div class="instr border pt-4 pb-5">
-            <h1>Instrucciones</h1>
-            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error excepturi, at quos, nulla
-              ratione voluptatibus fugit dignissimos animi praesentium iure fuga totam optio, numquam ut pariatur beatae
-              eius veritatis dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit at nulla,
-              reprehenderit minus minima fuga blanditiis veniam rerum tenetur necessitatibus animi cum, incidunt,
-              quaerat itaque unde commodi cupiditate neque! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Vero nihil iure, illo aperiam qui quis id dolores aliquam suscipit? Nesciunt quidem rem, enim dolor
-              repudiandae molestias sint dicta dolores doloremque? Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Voluptate minima omnis quidem, numquam assumenda deserunt reprehenderit voluptatem ipsa ut, quisquam
-              temporibus itaque iure! Natus, magni. Natus, omnis corporis. Quis, dolorum! Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Dolorem hic dolorum maiores quasi asperiores, labore iste necessitatibus
-              cumque ut nobis ipsa odio quisquam maxime dolore harum. Earum, magni. Hic, aliquam?</p>
-            <h2 class="mt-4">Instrucciones Video</h2>
-            <iframe class="iframeVid mt-1" width="560" height="315" src="https://www.youtube.com/embed/WnbNPblKQFY"
+    <section class="container-fluid">
+      <div class="instruccionesContainer">
+        <div class="instruccionesUno">
+          <h1>Instrucciones</h1>
+          <h2>¿Cómo descargar comics?</h2>
+          <ol>
+            <li>Descargar un programa para descomprimir archivos, como winrar, winzip, 7zip, etc.</li>
+            <li>Ir al comic que deseas descargar y clickear en tu opcion de preferencia, Mega, Mediafire, etc.</li>
+            <li>Luego de saltar la publicidad, el o los archivos comenzarán a descargarse.</li>
+            <li>A continuacion, en el directorio donde se descargo el archivo, lo deberás descomprimir con tu programa
+              de preferencia.</li>
+            <li>Por ultimo para leerlo vas a necesitar un visualizador de imagenes, la predeterminada de tu sistema
+              operativo funciona, pero recomendamos Gonvisor, Mcomix, entre otros.</li>
+            <li>Y listo, ya podes comenzar a disfrutar de tu comic favorito!</li>
+          </ol>
+          <div class="text-center">
+            <iframe class="iframeVid" width="560" height="315" src="https://www.youtube.com/embed/WnbNPblKQFY"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quos quas cumque magnam, dolores
-              provident quo omnis corporis ipsum aspernatur ducimus adipisci rerum voluptatibus repellendus eligendi
-              cupiditate recusandae minima mollitia?</p>
-            <a href="#redes">Seguinos en nuestras redes!</a>
+          </div class="text-center">
+          <div class="iconsRedesInstrucciones">
+            <a href=""><i class="bi bi-twitter"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
           </div>
         </div>
-        <div class="instruccionesDer col-md-3">
-          <h3 class="mt-3 textShadow">Tendencias</h1>
-            <a href="#"><img class="mt-2 shadow" src="../images/comics/carnage.jpg" alt="comics aside tendencias"
-                width="200"></a>
-            <a href="#"><img class="mt-2 shadow" src="../images/comics/Daken_Dark_Wolverine_Vol_1_4.webp"
-                alt="comics aside tendencias" width="200"></a>
-            <h3 class="mt-5 textShadow">Recien Agregados</h3>
-            <a href="#"><img class="mt-2 shadow" src="../images/comics/greenarrow.jpg"
-                alt="comics aside recien agregados" width="200"></a>
-            <a href="#"><img class="mt-2 shadow" src="../images/comics/A19LSfFe4sL.jpg"
-                alt="comics aside recien agregados" width="200"></a>
+        <div class="instruccionesDos">
+          <h3>Tendencias</h1>
+          <a href="#"><img src="../images/comics/carnage.jpg" alt="comics aside tendencias" width="200"></a>
+          <a href="#"><img src="../images/comics/all new wolverine.jpg" alt="comics aside tendencias" width="200"></a>
+          <h3 class="instruccionesDosHide">Recien Agregados</h3>
+          <a class="instruccionesDosHide" href="#"><img src="../images/comics/greenarrow.jpg" alt="comics aside recien agregados" width="200"></a>
+          <a class="instruccionesDosHide"href="#"><img src="../images/comics/A19LSfFe4sL.png" alt="comics aside recien agregados" width="200"></a>
         </div>
       </div>
     </section>
 
     <!--INICIO DE "COMICS RELACIONADOS"-->
 
-    <section class="comicsRelacionados p-4">
-      <h3 class="comicsRelacionadosh3 text-center ms-5 mt-3">Comics Relacionados</h3>
-      <div class="comicsRelacionadosImg d-flex justify-content-center pt-3">
-        <a href="#"><img class="comicsRelacionadosImg2 img-fluid shadow mb-5 bg-body rounded"
-            src="../images/comics/drstrange.jpg" alt="Comic 1 relacionado" width="300"></a>
-        <a href="#"><img class="comicsRelacionadosImg2 img-fluid shadow mb-5 bg-body rounded"
-            src="../images/comics/Old_Man_Logan_Vol_2_25.jpg" alt="Comic 2 relacionado" width="300"></a>
-        <a href="#"><img class="comicsRelacionadosImg2 img-fluid shadow mb-5 bg-body rounded"
-            src="../images/comics/penguin.jpg" alt="Comic 3 relacionado" width="300"></a>
-        <a href="#"><img class="comicsRelacionadosImg2 img-fluid hide4-2 shadow mb-5 bg-body rounded"
-            src="../images/comics/inhumans.jpg" alt="Comic 4 relacionado" width="300"></a>
+    <section class="comicsRelacionados">
+      <h3>Comics Relacionados</h3>
+      <div class="comicsRelacionadosImg">
+        <a href="#"><img src="../images/comics/drstrange.jpg" alt="Comic 1 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 2 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/penguin.jpg" alt="Comic 3 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/inhumans.png" alt="Comic 4 relacionado" width="280"></a>
       </div>
     </section>
 
@@ -194,6 +186,8 @@
       </div>
     </div>
   </footer>
+  <!--Bootstrap icons-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
