termine todos los htmls, los hice responsive, los organice y les di SEO

--- a/pages/comicejemplo.html
+++ b/pages/comicejemplo.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
+  <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
   <!--Fuente-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,9 +66,7 @@
     <section class="container-fluid comicTituloPadre">
       <h1 class="comicTitulo">Inhumans vs X-Men</h1>
       <div class="comicMain">
-        <div class="cardTitleImg">
-          <img src="../images/comics/inhumans-vs-xmen.png" alt="comic principal a descargar">
-        </div>
+        <img src="../images/comics/inhumans-vs-xmen.png" alt="comic principal a descargar" width="400px">
         <div class="card-body">
           <p class="cardDescripcion">Las nieblas terrígenas están en el mundo, dando poderes a los inhumanos, pero al
             mismo tiempo asesina mutantes en su paso por el mundo, infectándolos con el mortal M-Pox. Cyclops y Emma
@@ -81,17 +82,17 @@
           </div>
         </div>
       </div>
-    </section class="container-fluid">
+    </section>
 
     <!--INICIO DE "COMICS RELACIONADOS"-->
 
     <section class="comicsRelacionados">
-      <h3>Comics Relacionados</h3>
+      <h2>Comics Relacionados</h2>
       <div class="comicsRelacionadosImg">
-        <a href="#"><img src="../images/comics/drstrange.jpg" alt="Comic 1 relacionado" width="300"></a>
-        <a href="#"><img src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 2 relacionado" width="300"></a>
-        <a href="#"><img src="../images/comics/penguin.jpg" alt="Comic 3 relacionado" width="300"></a>
-        <a href="#"><img src="../images/comics/inhumans.png" alt="Comic 4 relacionado" width="300"></a>
+        <a href="#"><img src="../images/comics/drstrange.jpg" alt="Comic 1 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/Old_Man_Logan_Vol_2_25.png" alt="Comic 2 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/penguin.jpg" alt="Comic 3 relacionado" width="280"></a>
+        <a href="#"><img src="../images/comics/inhumans.png" alt="Comic 4 relacionado" width="280"></a>
       </div>
     </section>
 
@@ -149,21 +150,21 @@
     <div class="footerGrid container-fluid mt-5 p-5 text-light bg-miColor shadow2">
       <div>
         <a class="fs-1 text-light text-decoration-none me-5" href="../index.html">PAGINA COMICS</a>
-        <h5 class="copy">© 2022 Pagina Comics</h5>
+        <h4 class="copy">© 2022 Pagina Comics</h4>
       </div>
       <div class="sobreNosDiv">
-        <h5>Sobre Nosotros</h5>
+        <h4>Sobre Nosotros</h4>
         <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
       <div class="hide4">
-        <h5 class="pb-3">Contacto</h5>
+        <h4 class="pb-3">Contacto</h4>
         <p class="contactInfo me-2">ejemplo@gmail.com</p>
         <p class="contactInfo me-2">011 1234-1234</p>
         <p class="contactInfo me-2">Av. Jorge 1234</p>
       </div>
       <div class="hide4">
-        <h5 class="pb-3">Redes Sociales</h5>
+        <h4 class="pb-3">Redes Sociales</h4>
         <a class="linkRedes me-3 text-light pb-3" href="#">Facebook</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Twitter</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Instagram</a>
