--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Pagina de comics donde encontraras la mejor seleccion de comics en linea y gratis!">
-  <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
-  <!--Bootstrap CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!--CSS LIGHTSLIDER-->
-  <link type="text/css" rel="stylesheet" href="/css/lightslider.css" />
-  <!--CSS-->
-  <link rel="stylesheet" href="css/main.css">
+
   <!--Fuente-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--CSS /LIGHTSLIDER-->
+  <link type="text/css" rel="stylesheet" href="/css/lightslider.css" />
+  <!--CSS-->
+  <link rel="stylesheet" href="css/main.css">
   <!--SCRIPTS DEL CAROUSEL (LIGHTSLIDER)-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="/js/lightslider.js"></script>
@@ -76,7 +75,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="fs-5 nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="fs-5 nav-link active" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <!--Dropdown-->
             <li class="nav-item dropdown">
@@ -106,22 +105,22 @@
       <div class="item">
         <ul id="responsive" class="content-slider">
           <li>
-            <a href=""><img src="/images/comics/A19LSfFe4sL.png" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/A19LSfFe4sL.png" alt="carousel portada comic 1" width="300px"></a>
           </li>
           <li>
-            <a href=""><img src="/images/comics/1536.jpg" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/1536.jpg" alt="carousel portada comic 2" width="300px"></a>
           </li>
           <li>
-            <a href=""><img src="/images/comics/inhumans.png" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/inhumans.png" alt="carousel portada comic 3" width="300px"></a>
           </li>
           <li>
-            <a href=""><img src="/images/comics/batman.jpg" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/batman.jpg" alt="carousel portada comic 4" width="300px"></a>
           </li>
           <li>
-            <a href=""><img src="/images/comics/death of wolverine.jpg" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/death of wolverine.jpg" alt="carousel portada comic 5" width="300px"></a>
           </li>
           <li>
-            <a href=""><img src="/images/comics/magneto.png" alt="" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="/images/comics/magneto.png" alt="carousel portada comic 6" width="300px"></a>
           </li>
         </ul>
       </div>
@@ -130,7 +129,7 @@
     <!--INICIO DE TENDENCIAS-->
 
     <section class="tendencias">
-      <h1 class="text-center mt-3 textShadow">Tendencias</h1>
+      <h1 class="text-center">Tendencias</h1>
       <div class="tendencias1 mt-5">
         <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="./images/comics/1536.jpg"
             alt="Comic 1 tendencias" width="250"></a>
@@ -138,8 +137,7 @@
             alt="Comic 2 tendencias" width="250"></a>
         <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="./images/comics/batman.png"
             alt="Comic 3 tendencias" width="250"></a>
-        <a href="#"><img class="hide1 img-fluid me-3 shadow p-3 mb-5 bg-body rounded"
-            src="./images/comics/inhumans-vs-xmen.png" alt="Comic 4 tendencias" width="250"></a>
+        <a href="#"><img class="hide1 img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="./images/comics/inhumans-vs-xmen.png" alt="Comic 4 tendencias" width="250"></a>
       </div>
       <div class="tendencias2">
         <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="./images/comics/batman.jpg"
@@ -163,7 +161,7 @@
     <!--INICIO DE RECIEN AGREGADOS-->
 
     <section class="recienAgregados">
-      <h2 class="text-center mt-3 textShadow">Recien Agregados</h2>
+      <h2 class="text-center">Recien Agregados</h2>
       <div class="recienAgregados1 mt-5">
         <a href="#"><img class="img-fluid me-3 shadow p-3 mb-5 bg-body rounded" src="./images/comics/deadshot.png"
             alt="Comic 1 recien agregados" width="250"></a>
@@ -193,7 +191,7 @@
       </div>
     </section>
 
-    <!--INSTRUCCIONES-->
+    <!--INICIO DE INSTRUCCIONES-->
 
     <div class="container-fluid instrucciones text-center mb-5">
       <a class="fs-4 text-light" href="./pages/instrucciones.html">Instrucciones</a>
