--- a/pages/editoriales.html
+++ b/pages/editoriales.html
@@ -5,15 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
+  <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
+  <!--Fuente-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <!--Fuente-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <title>Pagina Comics - Editoriales</title>
 </head>
 
@@ -73,51 +76,65 @@
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/dc.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/dc.png" alt="editorial 2" width="250">
             <h2 class="tituloEditorialCard">Editorial DC</h2>
-            <p class="descripcionEditorialCard">DC Comics es una editorial de cómics estadounidense. Forma parte de DC Entertainment, una de las empresas que conforman Warner Bros Entertainment, creadores de la liga de la justicia.</p>
+            <p class="descripcionEditorialCard">DC Comics es una editorial de cómics estadounidense. Forma parte de DC
+              Entertainment, una de las empresas que conforman Warner Bros Entertainment, creadores de la liga de la
+              justicia.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/cosmica.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/cosmica.png" alt="editorial 3" width="250">
             <h2 class="tituloEditorialCard">Editorial Cosmica</h2>
-            <p class="descripcionEditorialCard">Activa desde 2013, publicaciones de cómics de fantasía y ciencia ficción de calidad que emocionan y hacen viajar a mundos desconocidos donde también se sienten reconocidas todas las personas que los leen.</p>
+            <p class="descripcionEditorialCard">Activa desde 2013, publicaciones de cómics de fantasía y ciencia ficción
+              de calidad que emocionan y hacen viajar a mundos desconocidos donde también se sienten reconocidas todas
+              las personas que los leen.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/darkhorse.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/darkhorse.png" alt="editorial 4" width="250">
             <h2 class="tituloEditorialCard">Editorial DarkHorse</h2>
-            <p class="descripcionEditorialCard">Dark Horse Comics es una editorial independiente de cómics estadounidense que desarrolla y publica su material de manera autónoma. La empresa fue fundada en 1986.</p>
+            <p class="descripcionEditorialCard">Dark Horse Comics es una editorial independiente de cómics
+              estadounidense que desarrolla y publica su material de manera autónoma. La empresa fue fundada en 1986.
+            </p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/amok.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/amok.png" alt="editorial 5" width="250">
             <h2 class="tituloEditorialCard">Editorial Amok</h2>
-            <p class="descripcionEditorialCard">Editorial Amok es una editorial española especializada en narrativa de autores del sudeste asiático. Te acercan a la historia y la cultura de esa zona con la literatura, el arte caracteristico de la region y mucho más.</p>
+            <p class="descripcionEditorialCard">Editorial Amok es una editorial española especializada en narrativa de
+              autores del sudeste asiático. Te acercan a la historia y la cultura con la literatura, el arte de la
+              region y mucho más.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/asttiberri.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/asttiberri.png" alt="editorial 6" width="250">
             <h2 class="tituloEditorialCard">Editorial Asttiberri</h2>
-            <p class="descripcionEditorialCard">Es una editorial de comics española especializada en novela grafica, fundada hace 20 años. Contiene una gran variedad de contenido, todo relacionado con su lugar de origen y cultura.</p>
+            <p class="descripcionEditorialCard">Es una editorial de comics española especializada en novela grafica,
+              fundada hace 20 años. Contiene una gran variedad de contenido, todo relacionado con su lugar de origen y
+              cultura.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/grafito.png" alt="editorial 1" width="250">
+          <a href="#"><img src="../images/editoriales/grafito.png" alt="editorial 7" width="250">
             <h2 class="tituloEditorialCard">Editorial Grafito</h2>
-            <p class="descripcionEditorialCard">Grafito Editorial está orientada a un lector que quiere disfrutar de un buen cómic con una buena historia, se especializan en cómic y novela gráfica autoconclusiva, a color y enfocan su esfuerzo a comics nacionales.</p>
+            <p class="descripcionEditorialCard">Grafito Editorial está orientada a un lector que quiere disfrutar de un
+              buen cómic con una buena historia, se especializan en cómic y novela gráfica autoconclusiva, a color y
+              enfocan su esfuerzo a comics nacionales.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
         <div class="editorialCard">
-          <a href="#"><img src="../images/editoriales/monocomics.png" alt="editorial 1" width="250">
-            <h2 class="tituloEditorialCard">Editorial MonoComics</h2>
-            <p class="descripcionEditorialCard">Fundada en 2014 fue la primer editorial en dedicarse a comics en Ecuador. Se dedican a la publicación, realización y soporte para nuevos autores ecuatorianos en el país con más de 10 publicaciones mínimo anuales.</p>
+          <a href="#"><img src="../images/editoriales/monocomics.png" alt="editorial 8" width="250">
+            <h2 class="tituloEditorialCard">MonoComics</h2>
+            <p class="descripcionEditorialCard">Fundada en 2014 fue la primer editorial en dedicarse a comics en
+              Ecuador. Se dedican a la publicación, realización y soporte para nuevos autores ecuatorianos en el país
+              con más de 10 publicaciones mínimo anuales.</p>
             <p class="leerMas">Leer Más</p>
           </a>
         </div>
@@ -135,7 +152,7 @@
 
     <section id="contacto" class="formIframe p-4">
       <form class="mt-4 p-5 border">
-        <h2 class="text-center pb-4">Contactanos!</h2>
+        <h3 class="text-center pb-4">Contactanos!</h3>
         <div class="mb-3">
           <label for="inputName" class="form-label">Nombre</label>
           <input type="text" class="mb-4 form-control" size="50" id="inputName">
@@ -186,21 +203,21 @@
     <div class="footerGrid container-fluid mt-5 p-5 text-light bg-miColor shadow2">
       <div>
         <a class="fs-1 text-light text-decoration-none me-5" href="../index.html">PAGINA COMICS</a>
-        <h3 class="copy">© 2022 Pagina Comics</h3>
+        <h4 class="copy">© 2022 Pagina Comics</h4>
       </div>
       <div class="sobreNosDiv">
-        <h3>Sobre Nosotros</h3>
+        <h4>Sobre Nosotros</h4>
         <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
       <div class="hide4">
-        <h3 class="pb-3">Contacto</h3>
+        <h4 class="pb-3">Contacto</h4>
         <p class="contactInfo me-2">ejemplo@gmail.com</p>
         <p class="contactInfo me-2">011 1234-1234</p>
         <p class="contactInfo me-2">Av. Jorge 1234</p>
       </div>
       <div class="hide4">
-        <h3 class="pb-3">Redes Sociales</h3>
+        <h4 class="pb-3">Redes Sociales</h4>
         <a class="linkRedes me-3 text-light pb-3" href="#">Facebook</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Twitter</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Instagram</a>
