--- a/pages/instrucciones.html
+++ b/pages/instrucciones.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
+  <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
+  <!--Fuente-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <!--Fuente-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <title>Pagina Comics - Instrucciones</title>
 </head>
 
@@ -82,18 +84,18 @@
               allowfullscreen></iframe>
           </div class="text-center">
           <div class="iconsRedesInstrucciones">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
         <div class="instruccionesDos">
           <h3>Tendencias</h1>
-          <a href="#"><img src="../images/comics/carnage.jpg" alt="comics aside tendencias" width="200"></a>
-          <a href="#"><img src="../images/comics/all new wolverine.jpg" alt="comics aside tendencias" width="200"></a>
+          <a href="#"><img src="../images/comics/carnage.jpg" alt="comics aside tendencias 1" width="200"></a>
+          <a href="#"><img src="../images/comics/all new wolverine.jpg" alt="comics aside tendencias 2" width="200"></a>
           <h3 class="instruccionesDosHide">Recien Agregados</h3>
-          <a class="instruccionesDosHide" href="#"><img src="../images/comics/greenarrow.jpg" alt="comics aside recien agregados" width="200"></a>
-          <a class="instruccionesDosHide"href="#"><img src="../images/comics/A19LSfFe4sL.png" alt="comics aside recien agregados" width="200"></a>
+          <a class="instruccionesDosHide" href="#"><img src="../images/comics/greenarrow.jpg" alt="comics aside recien agregados 3" width="200"></a>
+          <a class="instruccionesDosHide"href="#"><img src="../images/comics/A19LSfFe4sL.png" alt="comics aside recien agregados 4" width="200"></a>
         </div>
       </div>
     </section>
