--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
+  <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
+  <!--Fuente-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <!--Fuente-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@500&display=swap" rel="stylesheet">
   <title>Pagina Comics - Sobre Nosotros</title>
 </head>
 
@@ -147,7 +149,7 @@
 
     <section id="contacto" class="formIframe formIframePersonajes p-4">
       <form class="mt-4 p-5 border">
-        <h2 class="text-center pb-4">Contactanos!</h2>
+        <h4 class="text-center pb-4">Contactanos!</h4>
         <div class="mb-3">
           <label for="inputName" class="form-label">Nombre</label>
           <input type="text" class="mb-4 form-control" size="50" id="inputName">
@@ -198,21 +200,21 @@
     <div class="footerGrid container-fluid mt-5 p-5 text-light bg-miColor shadow2">
       <div>
         <a class="fs-1 text-light text-decoration-none me-5" href="../index.html">PAGINA COMICS</a>
-        <h6 class="copy">© 2022 Pagina Comics</h6>
+        <h4 class="copy">© 2022 Pagina Comics</h4>
       </div>
       <div class="sobreNosDiv">
-        <h6>Sobre Nosotros</h6>
+        <h4>Sobre Nosotros</h4>
         <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
       <div class="hide4">
-        <h6 class="pb-3">Contacto</h6>
+        <h4 class="pb-3">Contacto</h4>
         <p class="contactInfo me-2">ejemplo@gmail.com</p>
         <p class="contactInfo me-2">011 1234-1234</p>
         <p class="contactInfo me-2">Av. Jorge 1234</p>
       </div>
       <div class="hide4">
-        <h6 class="pb-3">Redes Sociales</h6>
+        <h4 class="pb-3">Redes Sociales</h4>
         <a class="linkRedes me-3 text-light pb-3" href="#">Facebook</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Twitter</a>
         <a class="linkRedes me-3 text-light pb-3" href="#">Instagram</a>
