agregue un logo y lo maquete

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       });
     });
   </script>
-  <title>Pagina Comics - Inicio</title>
+  <title>Guarida Comics - Inicio</title>
 </head>
 
 <body>
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <!--Logo-->
-        <a class="navbar-brand fw-bold fs-3" href="./index.html">PAGINA COMICS</a>
+        <a class="navbar-brand fw-bold fs-3" href="../index.html"><img src="../images/logo.png" alt="logo navbar" width="130px"></a>
         <!--Menu hamburguesa-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
