--- a/pages/editoriales.html
+++ b/pages/editoriales.html
@@ -17,7 +17,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <title>Pagina Comics - Editoriales</title>
+  <title>Guarida Comics - Editoriales</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <nav class="bg-miColor navbar navbar-expand-lg navbar-dark fixed-top shadow2 p-2">
       <div class="container">
         <!--Logo-->
-        <a class="navbar-brand fw-bold fs-3" href="../index.html">PAGINA COMICS</a>
+        <a class="navbar-brand fw-bold fs-3" href="../index.html"><img src="../images/logo.png" alt="logo navbar" width="130px"></a>
         <!--Menu hamburguesa-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,15 +38,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="fs-5 nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="fs-5 nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <!--Dropdown-->
             <li class="nav-item dropdown">
-              <a class="fs-5 fs-5 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              <a class="fs-5 fs-5 nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>
               <ul class="fs-5 dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="fs-5 dropdown-item" href="../pages/personajes.html">Personajes</a></li>
-                <li><a class="fs-5 dropdown-item" href="#">Editoriales</a></li>
+                <li><a class="fs-5 dropdown-item" href="#">Personajes</a></li>
+                <li><a class="fs-5 dropdown-item" href="../pages/editoriales.html">Editoriales</a></li>
               </ul>
             </li>
             <li class="nav-item">
