--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -16,7 +16,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--CSS-->
   <link rel="stylesheet" href="../css/main.css">
-  <title>Pagina Comics - Sobre Nosotros</title>
+  <title>Guarida Comics - Sobre Nosotros</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <nav class="bg-miColor navbar navbar-expand-lg navbar-dark fixed-top shadow2 p-2">
       <div class="container">
         <!--Logo-->
-        <a class="navbar-brand fw-bold fs-3" href="../index.html">PAGINA COMICS</a>
+        <a class="navbar-brand fw-bold fs-3" href="../index.html"><img src="../images/logo.png" alt="logo navbar" width="130px"></a>
         <!--Menu hamburguesa-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="fs-5 nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="fs-5 nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <!--Dropdown-->
             <li class="nav-item dropdown">
@@ -52,7 +52,7 @@
               <a class="fs-5 nav-link" href="#contacto">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="fs-5 nav-link" href="#">Sobre Nosotros</a>
+              <a class="fs-5 nav-link active" href="#">Sobre Nosotros</a>
             </li>
           </ul>
         </div>
@@ -81,7 +81,7 @@
             <h2 class="h2NecesitasAyuda mt-4">Necesitas ayuda?</h2>
             <a href="../pages/instrucciones.html">Instrucciones</a>
           </div>
-          <img src="../images/logo.jfif" alt="">
+          <img src="../images/logosobrenos.png" alt="logo sobre nosotros" width="400px">
         </div>
 
         <div class="sobreNosDosPadre">
