arregle la ruta de las imagenes del carousel

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
       <div class="item">
         <ul id="responsive" class="content-slider">
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/A19LSfFe4sL.png" alt="carousel portada comic 1" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/A19LSfFe4sL.png" alt="carousel portada comic 1" width="300px"></a>
           </li>
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/1536.jpg" alt="carousel portada comic 2" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/1536.jpg" alt="carousel portada comic 2" width="300px"></a>
           </li>
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/inhumans.png" alt="carousel portada comic 3" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/inhumans.png" alt="carousel portada comic 3" width="300px"></a>
           </li>
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/batman.jpg" alt="carousel portada comic 4" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/batman.jpg" alt="carousel portada comic 4" width="300px"></a>
           </li>
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/death of wolverine.jpg" alt="carousel portada comic 5" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/death of wolverine.jpg" alt="carousel portada comic 5" width="300px"></a>
           </li>
           <li>
-            <a href="./pages/comicejemplo.html"><img src="/images/comics/magneto.png" alt="carousel portada comic 6" width="300px"></a>
+            <a href="./pages/comicejemplo.html"><img src="./images/comics/magneto.png" alt="carousel portada comic 6" width="300px"></a>
           </li>
         </ul>
       </div>
