--- a/pages/comicejemplo.html
+++ b/pages/comicejemplo.html
@@ -147,27 +147,27 @@
   <!--INICIO DE FOOTER-->
 
   <footer>
-    <div class="footerGrid container-fluid mt-5 p-5 text-light bg-miColor shadow2">
+    <div class="footerGrid container-fluid">
       <div>
-        <a class="fs-1 text-light text-decoration-none me-5" href="../index.html">PAGINA COMICS</a>
+        <a class="fs-1 text-light text-decoration-none" href="./index.html">PAGINA COMICS</a>
         <h4 class="copy">© 2022 Pagina Comics</h4>
       </div>
       <div class="sobreNosDiv">
         <h4>Sobre Nosotros</h4>
-        <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
+        <p>Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
-      <div class="hide4">
+      <div class="hide2">
         <h4 class="pb-3">Contacto</h4>
-        <p class="contactInfo me-2">ejemplo@gmail.com</p>
-        <p class="contactInfo me-2">011 1234-1234</p>
-        <p class="contactInfo me-2">Av. Jorge 1234</p>
+        <p class="contactInfo">ejemplo@gmail.com</p>
+        <p class="contactInfo">011 1234-1234</p>
+        <p class="contactInfo">Av. Jorge 1234</p>
       </div>
-      <div class="hide4">
+      <div class="hide2">
         <h4 class="pb-3">Redes Sociales</h4>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Facebook</a>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Twitter</a>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Instagram</a>
+        <a class="linkRedes text-light pb-3" href="#">Instagram</a>
+        <a class="linkRedes text-light pb-3" href="#">Facebook</a>
+        <a class="linkRedes text-light pb-3" href="#">Twitter</a>
       </div>
     </div>
   </footer>
