--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
+  <meta name="description"
+    content="Pagina de comics ,enfocada en superhéroes, donde encontraras la mejor seleccion de comics en linea y gratis!">
   <meta name="keywords" content="COMICS, HEROES, SUPERHEROES, MARVEL, DC">
   <!--Fuente-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +29,8 @@
     <nav class="bg-miColor navbar navbar-expand-lg navbar-dark fixed-top shadow2 p-2">
       <div class="container">
         <!--Logo-->
-        <a class="navbar-brand fw-bold fs-3" href="../index.html"><img src="../images/logo.png" alt="logo navbar" width="130px"></a>
+        <a class="navbar-brand fw-bold fs-3" href="../index.html"><img src="../images/logo.png" alt="logo navbar"
+            width="130px"></a>
         <!--Menu hamburguesa-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,52 +68,101 @@
       <h1 class="tituloPersonajes">Personajes</h1>
       <div class="contenedorPersonajes">
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/wolverine.jpg" alt="personaje " width="200"><h2>Wolverine</h2>
-            <p>Es un mutante que posee sentidos afinados a los animales, poderosa capacidad de regeneración conocida como un factor de curación, capacidades fisicas mejoradas y tres garras retráctiles en cada mano.</p><p class="leerMas">Leer Más</p></a>          
+          <a href="#"><img src="../images/personajes/wolverine.jpg" alt="personaje " width="200">
+            <h2>Wolverine</h2>
+            <p>Es un mutante que posee sentidos afinados a los animales, poderosa capacidad de regeneración conocida
+              como un factor de curación, capacidades fisicas mejoradas y tres garras retráctiles en cada mano.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/capAmerica.png" alt="personaje " width="200"><h2>Cap. America</h2>
-            <p>Utiliza un escudo casi indestructible que lanza como proyectil. Fue fisicamente mejorado por un suero experimental para ayudar a los Estados Unidos en la Segunda Guerra Mundial.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/capAmerica.png" alt="personaje " width="200">
+            <h2>Cap. America</h2>
+            <p>Utiliza un escudo casi indestructible que lanza como proyectil. Fue fisicamente mejorado por un suero
+              experimental para ayudar a los Estados Unidos en la Segunda Guerra Mundial.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/hawkeye.jpg" alt="personaje " width="200"><h2>Hawkeye</h2>
-            <p>Ojo de Halcón es un excelente arquero, y experto en diseño y construcción de nuevas puntas de flecha. Tiene experiencia como artista circense y una visión extraordinaria.</p><p class="leerMas">Leer Más</p></a>
-        </div>      
-        <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/deadpool.png" alt="personaje " width="200"><h2>Deadpool</h2>
-            <p>Wade Wilson, tras ser sometido a un cruel experimento científico, adquiere poderes que le convierten en Deadpool. Armado con sus nuevas habilidades y un retorcido sentido del humor</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/hawkeye.jpg" alt="personaje " width="200">
+            <h2>Hawkeye</h2>
+            <p>Ojo de Halcón es un excelente arquero, y experto en diseño y construcción de nuevas puntas de flecha.
+              Tiene experiencia como artista circense y una visión extraordinaria.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/drStrange.png" alt="personaje " width="200"><h2>Dr. Strange</h2>
-            <p>Stephen Strange posee vastos poderes místicos (teletransportación, generación de ilusiones, proyección de energía), cuyo nivel puede compararse a las de algunas entidades cósmicas.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/deadpool.png" alt="personaje " width="200">
+            <h2>Deadpool</h2>
+            <p>Wade Wilson, tras ser sometido a un cruel experimento científico, adquiere poderes que le convierten en
+              Deadpool. Armado con sus nuevas habilidades y un retorcido sentido del humor</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/thor.png" alt="personaje " width="200"><h2>Thor</h2>
-            <p>Thor, hijo de Odin, es el Dios del Trueno, miembro de la raza conocida como los Asgardianos, armado con su martillo encantado Mjolnir, que le ayuda a canalizar sus energías divinas.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/drStrange.png" alt="personaje " width="200">
+            <h2>Dr. Strange</h2>
+            <p>Stephen Strange posee vastos poderes místicos (teletransportación, generación de ilusiones, proyección de
+              energía), cuyo nivel puede compararse a las de algunas entidades cósmicas.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/panteraNegra.png" alt="personaje " width="200"><h2>Pantera Negra</h2>
-            <p>Es el rey y protector de Wakanda. Posee habilidades mejoradas a través de rituales antiguos de Wakanda, confía en su dominio de la ciencia, el entrenamiento físico y las habilidades de combate mano a mano.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/thor.png" alt="personaje " width="200">
+            <h2>Thor</h2>
+            <p>Thor, hijo de Odin, es el Dios del Trueno, miembro de la raza conocida como los Asgardianos, armado con
+              su martillo encantado Mjolnir, que le ayuda a canalizar sus energías divinas.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/psylocke.png" alt="personaje " width="200"><h2>Psylocke</h2>
-            <p>Psylocke es una mutante que puede leer mentes y proyectar sus pensamientos en la mente de otros. Tambien genera tiene la habilidad de crear armas de energía psíquica y es experta en artes marciales.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/panteraNegra.png" alt="personaje " width="200">
+            <h2>Pantera Negra</h2>
+            <p>Es el rey y protector de Wakanda. Posee habilidades mejoradas a través de rituales antiguos de Wakanda,
+              confía en su dominio de la ciencia, el entrenamiento físico y las habilidades de combate mano a mano.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/nightcrawler.png" alt="personaje " width="200"><h2>Nightcrawler</h2>
-            <p>Como mutante, Kurt Wagner tiene la capacidad de teleportarse, hasta una distancia máxima de unos tres kilómetros, además de una agilidad sobrehumana, y diversas mutaciones en su aspecto físico externo</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/psylocke.png" alt="personaje " width="200">
+            <h2>Psylocke</h2>
+            <p>Psylocke es una mutante que puede leer mentes y proyectar sus pensamientos en la mente de otros. Tambien
+              genera tiene la habilidad de crear armas de energía psíquica y es experta en artes marciales.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard">
-          <a href="#"><img src="../images/personajes/ironMan.png" alt="personaje " width="200"><h2>Iron Man</h2>
-            <p>Tony Stark, es un ingenioso científico, quien sufrió una grave lesión en el pecho durante un secuestro en el Medio Oriente. Para escapar crea una armadura, la cual usara para proteger al mundo como Iron Man.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/nightcrawler.png" alt="personaje " width="200">
+            <h2>Nightcrawler</h2>
+            <p>Como mutante, Kurt Wagner tiene la capacidad de teleportarse, hasta una distancia máxima de unos tres
+              kilómetros, además de una agilidad sobrehumana, y diversas mutaciones en su aspecto físico externo</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
+        </div>
+        <div class="personajesCard">
+          <a href="#"><img src="../images/personajes/ironMan.png" alt="personaje " width="200">
+            <h2>Iron Man</h2>
+            <p>Tony Stark, es un ingenioso científico, quien sufrió una grave lesión en el pecho durante un secuestro en
+              el Medio Oriente. Para escapar crea una armadura, la cual usara para proteger al mundo como Iron Man.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard hideCard">
-          <a href="#"><img src="../images/personajes/spiderMan.png" alt="personaje " width="200"><h2>Spider Man</h2>
-            <p>Como resultado de la mordedura de una araña radioactiva, el estudiante de secundaria Peter Parker desarrolló poderes y habilidades similares a las de una araña, convirtiendose en el superheroe Spider Man.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/spiderMan.png" alt="personaje " width="200">
+            <h2>Spider Man</h2>
+            <p>Como resultado de la mordedura de una araña radioactiva, el estudiante de secundaria Peter Parker
+              desarrolló poderes y habilidades similares a las de una araña, convirtiendose en el superheroe Spider Man.
+            </p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
         <div class="personajesCard hideCard">
-          <a href="#"><img src="../images/personajes/punisher.png" alt="personaje " width="200"><h2>The Punisher</h2>
-            <p>Tras la muerte de su esposa e hijos, asesinados por la mafia, Frank Castle emprende una guerra personal contra los criminales, usando toda clase de tácticas y armamento como un veterano de guerra.</p><p class="leerMas">Leer Más</p></a>
+          <a href="#"><img src="../images/personajes/punisher.png" alt="personaje " width="200">
+            <h2>The Punisher</h2>
+            <p>Tras la muerte de su esposa e hijos, asesinados por la mafia, Frank Castle emprende una guerra personal
+              contra los criminales, usando toda clase de tácticas y armamento como un veterano de guerra.</p>
+            <p class="leerMas">Leer Más</p>
+          </a>
         </div>
       </div>
       <div class="botonesSiguiente mt-4 mb-4">
@@ -175,27 +226,27 @@
   <!--INICIO DE FOOTER-->
 
   <footer>
-    <div class="footerGrid container-fluid mt-5 p-5 text-light bg-miColor shadow2">
+    <div class="footerGrid container-fluid">
       <div>
-        <a class="fs-1 text-light text-decoration-none me-5" href="../index.html">PAGINA COMICS</a>
+        <a class="fs-1 text-light text-decoration-none" href="./index.html">PAGINA COMICS</a>
         <h4 class="copy">© 2022 Pagina Comics</h4>
       </div>
       <div class="sobreNosDiv">
         <h4>Sobre Nosotros</h4>
-        <p id="sobreNos">Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
+        <p>Somos una pagina para amantes de los comics. Aca vas a poder encontrar variedad de comics
           gratis y rapido para poder descargar en tu dispositivo.</p>
       </div>
-      <div class="hide4">
+      <div class="hide2">
         <h4 class="pb-3">Contacto</h4>
-        <p class="contactInfo me-2">ejemplo@gmail.com</p>
-        <p class="contactInfo me-2">011 1234-1234</p>
-        <p class="contactInfo me-2">Av. Jorge 1234</p>
+        <p class="contactInfo">ejemplo@gmail.com</p>
+        <p class="contactInfo">011 1234-1234</p>
+        <p class="contactInfo">Av. Jorge 1234</p>
       </div>
-      <div class="hide4">
+      <div class="hide2">
         <h4 class="pb-3">Redes Sociales</h4>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Facebook</a>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Twitter</a>
-        <a class="linkRedes me-3 text-light pb-3" href="#">Instagram</a>
+        <a class="linkRedes text-light pb-3" href="#">Instagram</a>
+        <a class="linkRedes text-light pb-3" href="#">Facebook</a>
+        <a class="linkRedes text-light pb-3" href="#">Twitter</a>
       </div>
     </div>
   </footer>
